# tauri-kit

./: .clinerules  .dockerignore  .env.example  .gitignore  Caddyfile  README.md  bootstrap.sh  deploy.sh  docker-compose.yml  eslint.config.js  index.html  init-livekit.sh  livekit.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
agent/: .env.example  README_AGENT.md  exporter.py  main.py  pytest.ini  requirements.txt  summarizer.py  transcriber.py
agent/tests/: test_exporter.py  test_main.py  test_summarizer.py  test_transcriber.py
docs/: AI_GUIDELINES.md  ARCHITECTURE.md  PLAN.md  README.md  TESTING.md
server/: .env.example  Dockerfile  package.json  tsconfig.build.json  tsconfig.json
server/src/: .env.example  config.ts  index.ts  tokenService.ts
server/tests/: tokenService.test.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/Chat/: ChatPanel.test.tsx  ChatPanel.tsx  index.ts
src/components/Controls/: ControlBar.tsx  index.ts
src/components/Room/: RoomView.tsx  index.ts
src/components/ScreenShare/: ScreenShareView.tsx  index.ts
src/hooks/: useCopyFeedback.ts  useLiveKitRoom.ts  useTranscription.test.ts  useTranscription.ts
src/pages/: JoinPage.tsx  RoomPage.tsx  TranscriptPage.tsx
src/services/: e2eeService.test.ts  e2eeService.ts  fileDownload.ts  inviteLink.test.ts  inviteLink.ts  mediaOptions.test.ts  mediaOptions.ts  tauriCommands.ts  tokenService.test.ts  tokenService.ts
src/types/: index.ts
