[package]
name = "tauri-kit"
version = "1.0.4"
description = "TauriKit — cross-platform desktop app for self-hosted audio/video conferencing (LiveKit SFU, optional E2EE, optional STT/summary agent)"
authors = ["Zakharievich"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_kit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.clippy]
all = "warn"
pedantic = "warn"

